fixtures/valid/02-rust-cli-with-operation/input.anatomy
anatomy_version = "0.1"
description = "Rust CLI with full [operation] populated."

[identity]
fingerprint = "a8fybpg4nh2b5vpw498v"

[identity.stack]
id = "rust"
hash = "a8fyb"

[identity.form]
id = "cli-tool"
hash = "pg4nh"

[identity.domain]
id = "web-publishing"
hash = "2b5vp"

[identity.function]
id = "markdown-to-static-html"
hash = "w498v"

[[operation.entry_points]]
path = "src/main.rs"
role = "cli"
description = "argument parsing and dispatch"

[[operation.entry_points]]
path = "src/lib.rs"
role = "library-root"

[operation.commands]
install = "cargo build"
test = "cargo test"
run = "cargo run --bin blogger"
lint = "cargo clippy -- -D warnings"
format = "cargo fmt"

[operation.conventions]
style = "rustfmt + clippy strict"
commits = "conventional-commits"
branch = "trunk-based; main protected"

[generated]
at = 2026-05-05T14:30:00.000Z
by = "anatomy-cli@0.0.1"
model = "claude-sonnet-4-6"
schema = "https://anatomy.dev/spec/0.1/schema.json"
